//
// Protocol buffers definition
//
syntax = "proto3";
package pt.tecnico.rec.grpc;


message Empty {
  //No arguments
}

message InitializeRequest {
  repeated string username = 1;
  map<string, int32> stations = 2;
}

message InitializeResponse {
  // No arguments
}

enum Type {
  USER = 0;
  STATION = 1;
}

message UserData {
  int32 balance = 1;
  optional bool state = 2;
}

message StationData {
  int32 bikes = 1;
  optional int32 lifts = 2;
  optional int32 returns = 3;
}

message ReadRequest {
  Type type = 1;
  string registry = 2;
}

message Tag {
  int32 seq = 1;
  int32 cid = 2;
}

message ReadResponse {
   oneof one_of {
     UserData user = 1;
     StationData station = 2;
   }
   Tag tag = 3;
}

message WriteRequest {
  Type type = 1;
  string registry = 2;
  oneof one_of {
    UserData user = 3;
    StationData station = 4;
  }
  Tag tag = 5;
}

message WriteResponse {
  // No arguments
}

message PingRequest {
  string instance = 1;
}

message PingResponse {
  string response = 1;
}

service RecordService {
  rpc initialize(InitializeRequest) returns (InitializeResponse);
  rpc read(ReadRequest) returns (ReadResponse);
  rpc write(WriteRequest) returns (WriteResponse);
  rpc ping(PingRequest) returns (PingResponse);
  rpc cleanup(Empty) returns (Empty);
}
